# obs-notifications

./: .editorconfig  CMakeLists.txt  README.md
.github/: DESCRIPTION  TOPICS
.github/workflows/: ci.yml
src/: Config.hpp.in  NotificationPlugin.cpp  obs_notifications.cpp
